<resources>
    <string name="hydra_hub_app_name">Hydra Entertainment Hub</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="connect">Connect</string>
    <string name="username">Username</string>
    <string name="profile_name_error_msg">Please enter your profile name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hydra_quizzes">Hydra Quizzes</string>
    <string name="odaberite_tacan_odgovor">Odaberite tacan odgovor:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="unesite_tacan_odgovor">Unesite tacan odgovor:</string>
    <string name="finish">finish</string>
    <string name="you_won">You Won</string>
    <string name="the_end">The End</string>
    <string name="play_again">Play again</string>
</resources>
