<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_image"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/the_end"/>


    <ImageView android:layout_width="120dp"
               android:layout_height="120dp"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="10dp"
               android:src="@mipmap/ic_launcher"/>

    <TextView
            android:id="@+id/textWinner"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/you_won"/>
    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/playAgain"
            android:textAllCaps="true"
            android:text="@string/play_again"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:textColor="@color/primary_light"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/finishButton"
            android:textAllCaps="true"
            android:text="@string/finish"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:textColor="@color/primary_light"
            android:layout_height="wrap_content"/>
</LinearLayout>