<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_image"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".MainActivity">


    <ImageView android:layout_width="120dp" android:layout_height="120dp"
               android:layout_gravity="center_horizontal"
               android:src="@mipmap/ic_launcher"/>
    <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_name"/>
    <EditText
            android:id="@+id/nameInput"
            android:hint="@string/username"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_marginTop="20dp"
            android:id="@+id/connectButton"
            android:textAllCaps="true"
            android:text="@string/connect"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:textColor="@color/primary_light"
            android:layout_height="wrap_content"/>
</LinearLayout>