<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:layout_height="match_parent"
              tools:context=".answers.OptionsAnswersFragment">


    <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_height="200dp">
        <TextView
                android:id="@+id/questionText"
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:text="@string/odaberite_tacan_odgovor"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp">
        <Button
                android:layout_marginTop="7dp" android:id="@+id/buttonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/colorPrimary"
                android:text="@string/a"
                android:gravity="center">
        </Button>

        <Button
                android:layout_marginTop="7dp"
                android:id="@+id/buttonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/colorPrimary"
                android:text="@string/b"
                android:gravity="center">
        </Button>
        <Button
                android:layout_marginTop="7dp"
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/colorPrimary"
                android:text="@string/c"
                android:gravity="center">
        </Button>
        <Button
                android:layout_marginTop="7dp"
                android:id="@+id/buttonD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/colorPrimary"
                android:text="@string/d"
                android:gravity="center">
        </Button>
    </LinearLayout>


</LinearLayout>